[gd_scene load_steps=5 format=2]

[ext_resource path="res://AssettsImage/Items/Frames/TerranMediumFrame.jpg" type="Texture" id=1]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox16Px.tres" type="DynamicFont" id=2]
[ext_resource path="res://ReusableUI/EquipmentDetail/EquipmentDetail.gd" type="Script" id=3]
[ext_resource path="res://Assetts3.0/OtherUI/Equinox14px.tres" type="DynamicFont" id=4]

[node name="Panel" type="Panel"]
anchor_right = 0.233
anchor_bottom = 0.237
margin_right = -23.36
margin_bottom = 70.04
rect_min_size = Vector2( 0, 326 )
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleRow" type="Panel" parent="."]
self_modulate = Color( 0.968627, 0.592157, 0.992157, 1 )
anchor_right = 1.0
anchor_bottom = 0.196
margin_bottom = 0.103996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TitleRow"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
custom_fonts/font = ExtResource( 2 )
text = "DESTINY OF MANKIND"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="VBoxContainer" parent="."]
anchor_left = 0.018
anchor_top = 0.025
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.0639992
margin_top = 63.85
margin_right = -8.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="HBox"]
margin_right = 408.0
margin_bottom = 128.0

[node name="Icon" type="TextureRect" parent="HBox/HBox"]
margin_right = 128.0
margin_bottom = 128.0
rect_min_size = Vector2( 128, 128 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Data" type="VBoxContainer" parent="HBox/HBox"]
margin_left = 136.0
margin_right = 408.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Total Row" type="HBoxContainer" parent="HBox/HBox/Data"]
margin_top = 20.0
margin_right = 272.0
margin_bottom = 36.0

[node name="Spacer" type="Label" parent="HBox/HBox/Data/Total Row"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
custom_fonts/font = ExtResource( 4 )

[node name="Unit" type="Label" parent="HBox/HBox/Data/Total Row"]
margin_left = 104.0
margin_right = 184.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Unit"
align = 1

[node name="Total" type="Label" parent="HBox/HBox/Data/Total Row"]
margin_left = 192.0
margin_right = 272.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
text = "Total"
align = 1

[node name="WeightRow" type="HBoxContainer" parent="HBox/HBox/Data"]
margin_top = 44.0
margin_right = 272.0
margin_bottom = 60.0

[node name="Title" type="Label" parent="HBox/HBox/Data/WeightRow"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
custom_fonts/font = ExtResource( 4 )
text = "Mass"

[node name="Mass" type="Label" parent="HBox/HBox/Data/WeightRow"]
margin_left = 104.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="TMass" type="Label" parent="HBox/HBox/Data/WeightRow"]
margin_left = 192.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="VolumeRow" type="HBoxContainer" parent="HBox/HBox/Data"]
margin_top = 68.0
margin_right = 272.0
margin_bottom = 84.0

[node name="Title" type="Label" parent="HBox/HBox/Data/VolumeRow"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
custom_fonts/font = ExtResource( 4 )
text = "Volume"

[node name="Volume" type="Label" parent="HBox/HBox/Data/VolumeRow"]
margin_left = 104.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="TVolume" type="Label" parent="HBox/HBox/Data/VolumeRow"]
margin_left = 192.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="ValueRow" type="HBoxContainer" parent="HBox/HBox/Data"]
margin_top = 92.0
margin_right = 272.0
margin_bottom = 108.0

[node name="Title" type="Label" parent="HBox/HBox/Data/ValueRow"]
margin_right = 96.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.2
custom_fonts/font = ExtResource( 4 )
text = "Value"

[node name="Value" type="Label" parent="HBox/HBox/Data/ValueRow"]
margin_left = 104.0
margin_top = 1.0
margin_right = 184.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="TValue" type="Label" parent="HBox/HBox/Data/ValueRow"]
margin_left = 192.0
margin_top = 1.0
margin_right = 272.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "xxxx"
align = 1

[node name="Label" type="Label" parent="HBox"]
margin_top = 136.0
margin_right = 408.0
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "A description of how awesome this item is. "
autowrap = true
